# differential_robot

./: .gitignore  .gitmodules  README.md
Hardware/: Base.dxf  README.md
Hardware/Design/: Base.dxf  Base.stl
Hardware/Design/images/: images.pptx
Hardware/Schematics/: dc_motor_library.bak
Hardware/Schematics/Libraries/: mario.bak  mario.kicad_sym
Hardware/Schematics/Libraries/ESP32-S3-DEVKITC-1-N8R2/: ESP32-S3-DEVKITC-1-N8R2.bak  ESP32-S3-DEVKITC-1-N8R2.kicad_sym  XCVR_ESP32-S3-DEVKITC-1-N8R2.kicad_mod
Hardware/Schematics/schematics/: schematics.kicad_pro  schematics.kicad_sch
Software/: .gitignore
Software/diffbot_ws/src/diffbot_bringup/: CMakeLists.txt  package.xml
Software/diffbot_ws/src/diffbot_description/: package.xml
Software/diffbot_ws/src/diffbot_firmware/: CMakeLists.txt
Software/diffbot_ws/src/diffbot_utils/: CMakeLists.txt  package.xml
Software/src/diffbot_controller/: package.xml
Software/src/diffbot_controller/config/: diffbot_controllers.yaml
Software/src/diffbot_description/urdf/: diffbot.urdf.xacro
Software/src/diffbot_firmware/src/: diffbot_interface.cpp
control_theory/system_identification/: SystemIdentification.sid  config.yaml  plot_data.m  plot_utils.py  serial_listener.py  serial_reader.slx  serial_reader.slx.original  stability_analysis.m
control_theory/system_identification/Results/: Comparacion.eps  Modeling.eps
control_theory/system_identification/Results/Data/: data.csv  data.mat
control_theory/system_identification/firmware/: platformio.ini
control_theory/system_identification/firmware/src/: main.cpp
diffbot_ws/: .gitignore
diffbot_ws/src/bno055/: setup.py
diffbot_ws/src/diffbot_bringup/: CMakeLists.txt  package.xml
diffbot_ws/src/diffbot_bringup/config/: rplidar_a1.yaml
diffbot_ws/src/diffbot_bringup/launch/: full_real_robot.launch.py  real_robot.launch.py  simulated_robot.launch.py
diffbot_ws/src/diffbot_bringup/rviz/: simulated_robot.rviz
diffbot_ws/src/diffbot_controller/: CMakeLists.txt  package.xml
diffbot_ws/src/diffbot_controller/config/: diffbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
diffbot_ws/src/diffbot_controller/diffbot_controller/: noisy_controller.py  simple_controller.py
diffbot_ws/src/diffbot_controller/include/diffbot_controller/: noisy_controller.hpp  simple_controller.hpp
diffbot_ws/src/diffbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
diffbot_ws/src/diffbot_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
diffbot_ws/src/diffbot_description/: CMakeLists.txt  package.xml
diffbot_ws/src/diffbot_description/launch/: display.launch.py  gazebo.launch.py
diffbot_ws/src/diffbot_description/meshes/: WT901C.STL
diffbot_ws/src/diffbot_description/rviz/: display.rviz  localization.rviz  simulated_robot.rviz  (+1 more)
diffbot_ws/src/diffbot_examples/: CMakeLists.txt  package.xml
diffbot_ws/src/diffbot_examples/diffbot_examples/: simple_lifecycle_node.py  simple_publisher.py
diffbot_ws/src/diffbot_examples/src/: simple_lifecycle_node.cpp
diffbot_ws/src/diffbot_firmware/: CMakeLists.txt  diffbot_interface.xml  package.xml
diffbot_ws/src/diffbot_localization/: CMakeLists.txt  package.xml
diffbot_ws/src/diffbot_mapping/: CMakeLists.txt  package.xml
diffbot_ws/src/diffbot_utils/: CMakeLists.txt  package.xml
diffbot_ws/src/diffbot_utils/diffbot_utils/: imu_converter.py
diffbot_ws/src/diffbot_utils/src/: safety_stop.cpp  trajectory_drawer.cpp
document/images/: diagrams.drawio  images.pptx
src/diffbot_bringup/: CMakeLists.txt  package.xml
src/diffbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/diffbot_controller/: CMakeLists.txt  package.xml
src/diffbot_controller/config/: diffbot_controllers.yaml
src/diffbot_controller/diffbot_controller/: simple_controller.py
src/diffbot_controller/launch/: controller.launch.py
src/diffbot_controller/src/: simple_controller.cpp
src/diffbot_description/: CMakeLists.txt  package.xml
src/diffbot_description/launch/: gazebo.launch.py
src/diffbot_description/urdf/: diffbot.urdf.xacro  diffbot_gazebo.xacro  diffbot_ros2_control.xacro
src/diffbot_firmware/: CMakeLists.txt  package.xml
src/diffbot_firmware/launch/: hardware_interface.launch.py
utils/: .gitignore  90-diffbot.rules  activate_hotspot.sh  kill_ros2.sh  launch_robot.sh  robot_launch.sh  serial_writer.py  static_wifi_ip.sh
(+61 files in other folders)
